<resources>
    <string name="app_name">Family Mint</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_amount">Enter total Net Worth</string>
    <string name="done">Set</string>
    <string name="member_details">Member details(Optional)</string>
    <string name="wife_name">Wife name</string>
    <string name="switch_account"><u>Direct fund</u></string>
    <string name="fabbutton">fabButton</string>
    <string name="add_message">Add message</string>
    <string name="Rs">₹</string>
    <string name="hint_zero">0</string>
    <string name="label_send_money">Send Money</string>
    <string name="amount_sent_successfully">Sent Successfully!</string>
    <string name="reset">Reset</string>
    <string name="daug_name">Daughter Name</string>
</resources>