<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginStart="@dimen/margin_24"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_30">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_field_cardno"
                style="@style/TextInputLayoutStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_36"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_cardno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@null"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_name"
                    android:textColorHint="@color/color_hint"
                    android:inputType="phone"
                    android:longClickable="false"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:focusedByDefault="true"
                    android:nextFocusDown="@+id/txt_valid_month"
                    android:padding="@dimen/margin_12dp"
                    android:textColor="@color/text_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_field_name_on_card"
                style="@style/TextInputLayoutStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:visibility="visible"
                app:boxBackgroundColor="@color/disabled_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_field_cardno">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_name_on_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:inputType="textCapSentences"
                    android:textColorHint="@color/color_hint"
                    android:imeOptions="actionNext"
                    android:maxLength="25"
                    android:nextFocusDown="@+id/btn_link_card"
                    android:singleLine="true"
                    android:textSize="@dimen/size_14sp"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_validity"
                style="@style/TextInputLayoutStyle2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:visibility="visible"
                app:boxBackgroundColor="@color/disabled_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_field_name_on_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_valid_expiry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="DOB (DD/MM/YYYY)"
                    android:textColorHint="@color/color_hint"
                    android:inputType="phone"
                    android:maxLength="7"
                    android:paddingStart="@dimen/margin_14"
                    android:textSize="@dimen/size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textViewNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/member_details"
                android:textColor="@color/colorPrimaryWalletItem"
                android:textSize="@dimen/size_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_validity" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_field_nick_name"
                style="@style/TextInputLayoutStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:visibility="visible"
                app:boxBackgroundColor="@color/disabled_color"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNick">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wife_name"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/color_hint"
                    android:maxLength="25"
                    android:nextFocusDown="@+id/btn_link_card"
                    android:singleLine="true"
                    android:textSize="@dimen/size_14sp"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_link_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_36"
                app:cornerRadius="8dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_field_nick_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

